🚧 document.getElementById 추가

--- a/workspace-ins/ch05/ex05-01.html
+++ b/workspace-ins/ch05/ex05-01.html
@@ -8,10 +8,17 @@
 <body>
   <h1>쇼핑 목록</h1>
   <p>마트에서 사야할 목록</p>
-  <ul id="purchases" class="list">
+  <ul id="purchases" class="list hello">
     <li>두부</li>
     <li>계란</li>
     <li>라면</li>
   </ul>
+
+  <script>
+    const shoppingList = document.getElementById('purchases');
+    console.log(shoppingList);
+    console.dir(shoppingList);
+    
+  </script>
 </body>
 </html>
