--- a/workspace-ins/ch05/ex05-01.html
+++ b/workspace-ins/ch05/ex05-01.html
@@ -16,12 +16,23 @@
 
   <script>
     // id가 "purchases"인 요소노드를 찾음
-    const shoppingList = document.getElementById('purchases');
+    const shoppingList = document.getElementById('purchases'); // ul
+
     // 제일 먼저 구매해야 할 항목은 무엇인가?
-    const liList = shoppingList.getElementsByTagName('li');
-    console.log(liList);
-    const firstLi = liList[0];
+    // const liList = shoppingList.getElementsByTagName('li'); // [li, li, li]
+    // console.log(liList);
+    // const firstLi = liList[0]; // <li>두부</li>
+    const firstLi = shoppingList.firstElementChild; // <li>두부</li>
     console.log(firstLi);
+    const firstTextNode = firstLi.firstChild;
+    console.log(firstTextNode);
+    console.log('제일 먼저 구매할 항목', firstTextNode.nodeValue);
+
+    // 첫번째 구매할 항목을 양파로 수정
+    firstTextNode.nodeValue = '양파';
+
+    // 마지막으로 사야할 품목 출력
+    
   </script>
 </body>
 </html>
