--- a/workspace-ins/ch05/ex05-03.html
+++ b/workspace-ins/ch05/ex05-03.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>쇼핑목록</title>
+
+  <script>
+    // 첫번째 버튼 찾기
+    const btn1 = document.querySelector('div > button');
+    const btn2 = btn1.nextElementSibling;
+    const btn3 = btn2.nextElementSibling;
+
+  </script>
 </head>
 <body>
   <h1>쇼핑 목록</h1>
@@ -27,10 +35,6 @@
     <li>다크나이트</li>
     <li>미션임파서블</li>
   </ul>
-
-  <script type="module" src="ex05-01-02.js"></script>
-  <script type="module" src="ex05-01-03.js"></script>
-  <script type="module" src="ex05-01-04.js"></script>
 
 </body>
 </html>
