--- a/workspace-ins/ch05/ex05-03.html
+++ b/workspace-ins/ch05/ex05-03.html
@@ -5,22 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>쇼핑목록</title>
 
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <!-- <style>
+    div > button {
+      background-color: red;
+    }
+  </style> -->
+
+
   <script>
-    // 첫번째 버튼 찾기
-    const btn1 = document.querySelector('div > button');
-    const btn2 = btn1.nextElementSibling;
-    const btn3 = btn2.nextElementSibling;
+    // HTML 문서 로딩 완료(DOM 객체 생성 완료), 이미지, css 같은 외부 컨텐츠 로딩 완료 후에 발생하는 이벤트
+    document.addEventListener('load', function(){});
+
+    // HTML 문서 로딩 완료(DOM 객체 생성 완료) 후에 발생하는 이벤트
+    document.addEventListener('DOMContentLoaded', function(){
+      // 첫번째 버튼 찾기
+      const btn1 = document.querySelector('div > button');
+      const btn2 = btn1.nextElementSibling;
+      const btn3 = btn2.nextElementSibling;
+
+      // 이벤트 등록 방법 1: elem.on<event> 속성에 이벤트 핸들러 추가
+      btn1.onclick = function(){
+        const movies = document.querySelector('#movies');
+
+        // 임한길: 자식 li 찾고 그중에 두번째 요소요!
+        const secondLi = movies.getElementsByTagName('li')[1];
+
+        // 송채은: 첫번째 영화 찾은 다음에 nextSibling
+        // const firstLi = movies.firstElementChild;
+        // const secondLi = firstLi.nextElementSibling;
+
+        console.log(secondLi.firstChild.nodeValue);
+        // textContent: 요소노드의 내부 텍스트노드의 문자열 값을 가지고 있는 속성
+        console.log(secondLi.textContent);
+      };
+    });
+
+
+    // 마지막에 우유 추가
+    function addMilk(){
+      console.log('우유 추가 예정');
+      const shoppingList = document.getElementById('purchases');
+      // innerHTML: 요소노드의 내부 HTML 코드값을 문자열로 가지고 있는 속성
+      console.log(shoppingList.innerHTML);
+      
+    }
+    
 
   </script>
+
 </head>
 <body>
   <h1>쇼핑 목록</h1>
 
   <div>
     <button>두번째 영화 찾기</button>
-    <button>마지막에 우유 추가</button>
+    <!-- 이벤트 등록 방법 2: HTML 요소의 on<event> 속성의 값으로 이벤트 발생시 실행할 코드를 등록 -->
+    <button OnClIcK="addMilk();console.log('우유 추가 완료');">마지막에 우유 추가</button>
     <button>첫번째 항목 삭제</button>
   </div>
+
 
   <p>마트에서 사야할 목록</p>
   <ul id="purchases" class="list">
