--- a/workspace/ch05/ex05-04.html
+++ b/workspace/ch05/ex05-04.html
@@ -26,6 +26,7 @@
       btn.onclick = function () {
         console.log("눌렀네");
       };
+      // onclick 속성은 하나의 함수만 할당할 수 있기 때문에, 두 번째 할당이 첫 번째를 덮어씀
 
       // 이벤트 등록 방법 3: addEventListener()
       // DOM Level 2 방식(표준)
