--- a/workspace-ins/index.html
+++ b/workspace-ins/index.html
@@ -188,6 +188,49 @@
           </ul>
         </section>
       </section>
+
+      <section class="chapter">
+				<div class="chapter-title">
+					<h3 tabindex="0">5강: 클라이언트 사이드 자바스크립트 (DOM, Event, BOM, Ajax, Web APIs)</h3>
+					<button>예제목록 펼치기</button>
+				</div>
+        <section class="paragraph">
+          <h4 class="paragraph-title">5.1 DOM</h4>
+          <ul>
+            <li><a href="ch05/ex05-01.html">05-01 쇼핑 목록 - 요소 찾기</a></li>
+            <li><a href="ch05/ex05-02.html">05-02 Counter</a></li>
+            <li><a href="ch05/ex05-03.html">05-03 쇼핑 목록 - 요소 제어</a></li>
+            <li><a href="ch05/ex05-04.html">05-04 이벤트 등록 방법</a></li>
+            <li><a href="ch05/ex05-05.html">05-05 Todo List - DOM API 직접 사용</a></li>
+            <li><a href="ch05/ex05-06.html">05-06 HTML 속성 접근</a></li>
+            <li><a href="ch05/ex05-07.html">05-07 style 속성 접근</a></li>
+            <li><a href="ch05/ex05-08.html">05-08 class 속성 접근</a></li>
+          </ul>
+        </section>
+        <section class="paragraph">
+          <h4 class="paragraph-title">5.2 이벤트</h4>
+          <ul>
+            <li><a href="ch05/ex05-09.html">05-09 Event 객체</a></li>
+            <li><a href="ch05/ex05-10.html">05-10 버블링과 캡처링</a></li>
+            <li><a href="ch05/ex05-11.html">05-11 이벤트 위임</a></li>
+          </ul>
+        </section>
+        <section class="paragraph">
+          <h4 class="paragraph-title">5.3 BOM</h4>
+          <ul>
+          </ul>
+        </section>
+        <section class="paragraph">
+          <h4 class="paragraph-title">5.4 Aajx</h4>
+          <ul>
+          </ul>
+        </section>
+        <section class="paragraph">
+          <h4 class="paragraph-title">5.5 Web APIs</h4>
+          <ul>
+          </ul>
+        </section>
+      </section>
     </div>
     <footer class="footer">
       <p>Copyrightⓒ Javascript. All rights reserved.</p>
