--- a/workspace-ins/ch05/ex05-05.html
+++ b/workspace-ins/ch05/ex05-05.html
@@ -205,8 +205,8 @@
 
       }else{ // done이 false라면 <span>샘플3</span> -> <span><s>샘플3</s></span>로 수정
         const sElem = document.createElement('s'); // <s>
-          sElem.appendChild(titleEl.firstChild); // <s>샘플3</s>
-          
+        sElem.appendChild(titleEl.firstChild); // <s>샘플3</s>, <span></span>
+        titleEl.appendChild(sElem); // <span><s>샘플3</s></span>
       }
     }
 
