--- a/workspace-ins/ch05/ex05-05.html
+++ b/workspace-ins/ch05/ex05-05.html
@@ -201,13 +201,15 @@
       const done = targetLi.dataset.done === 'true';
       console.log(typeof done, done);
       const titleEl = targetLi.querySelector('span:last-of-type'); // <span>샘플3</span>
-      if(done){ // done이 true라면 <span><s>샘플3</s></span> -> <span>샘플3</span>로 수정
-
+      if(done){ // done이 true라면 <span><s>샘플3</s></span> -> <span>샘플3</span>로 수정        
+        titleEl.appendChild(titleEl.firstChild.firstChild);
+        titleEl.firstChild.remove();
       }else{ // done이 false라면 <span>샘플3</span> -> <span><s>샘플3</s></span>로 수정
         const sElem = document.createElement('s'); // <s>
         sElem.appendChild(titleEl.firstChild); // <s>샘플3</s>, <span></span>
         titleEl.appendChild(sElem); // <span><s>샘플3</s></span>
       }
+      targetLi.dataset.done = !done; // 완료 여부를 토글
     }
 
     /**
