--- a/workspace-ins/ch05/ex05-10.html
+++ b/workspace-ins/ch05/ex05-10.html
@@ -11,7 +11,22 @@
     }
   </style>
   <script>
-    
+    document.addEventListener("DOMContentLoaded", function(){
+      const form = document.querySelector('form');
+      const div = document.querySelector('div');
+      const p = document.querySelector('p');
+
+      form.addEventListener('click', function(){
+        console.log('form 클릭');
+      });
+      div.addEventListener('click', function(){
+        console.log('  div 클릭');
+      });
+      p.addEventListener('click', function(){
+        console.log('    p 클릭');
+      });
+
+    });
   </script>
 </head>
 <body>
