--- a/workspace-ins/ch05/ex05-11.html
+++ b/workspace-ins/ch05/ex05-11.html
@@ -14,9 +14,19 @@
       padding: 10px;
       border: 1px solid gray;
     }
+    .red{
+      background-color: red;
+    }
   </style>
   <script>
-    
+    document.addEventListener('DOMContentLoaded', function(){
+      const table = document.querySelector('table');
+      table.addEventListener('click', function(event){
+        if(event.target.tagName === 'TD'){
+          event.target.classList.toggle('red');
+        }
+      });
+    });
   </script>
 </head>
 <body>
