✨ 핑크핑크 선영 코드 추가

--- a/workspace-ins/ch05/ex05-11.html
+++ b/workspace-ins/ch05/ex05-11.html
@@ -17,6 +17,9 @@
     .red{
       background-color: red;
     }
+    .pink {
+        background: pink;
+      }
   </style>
   <script>
     document.addEventListener('DOMContentLoaded', function(){
@@ -24,6 +27,16 @@
       table.addEventListener('click', function(event){
         if(event.target.tagName === 'TD'){
           event.target.classList.toggle('red');
+        }
+      });
+
+      // 박선영
+      table.addEventListener('dblclick', function (event) {
+        console.log(event.target);
+        console.log(event.currentTarget);
+
+        if (event.target.tagName === 'TD') {
+          event.target.classList.toggle('pink');
         }
       });
     });
