--- a/workspace-ins/ch02/ex02-21.html
+++ b/workspace-ins/ch02/ex02-21.html
@@ -6,7 +6,23 @@
   <title>익명 함수 사용</title>
 
   <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log('load 이벤트 발생.');
 
+      const btn = document.querySelector('button');
+      btn.addEventListener('click', () => {
+        console.log('click 이벤트 발생.');
+
+        const msg = '버튼 누른 후 3초 지남.';
+        setTimeout(() => {
+          console.log(msg);
+        }, 1000*3);
+
+        console.log('click 이벤트 처리 완료.');
+      });
+
+      console.log('load 이벤트 처리 완료.');
+    });
   </script>
 </head>
 <body>
