--- a/workspace-ins/index.html
+++ b/workspace-ins/index.html
@@ -6,6 +6,7 @@
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://unpkg.com/jquery@3.7.1/dist/jquery.js"></script>
+  <script src="https://unpkg.com/lodash@4.17.21/lodash.js"></script>
   <script src="js/mylib.js"></script>
   <script>
     $(function(){
