--- a/workspace-ins/index.html
+++ b/workspace-ins/index.html
@@ -234,7 +234,7 @@
             <li><a href="ch02/ex02-17-03.js">02-17-03 함수 내부의 this 바인딩 문제 해결(화살표 함수)</a></li>
             <li><a href="ch02/ex02-17-04.js">02-17-04 함수 내부의 this 바인딩 문제 해결(bind)</a></li>
             <li><a href="ch02/ex02-18.js">02-18 가변 인자 처리 - apply() 활용</a></li>
-            <li><a href="ch02/ex02-18-02.js">02-18-02 가변 인자 처리 - 전개 연산자 활용</a></li>
+            <li><a href="ch02/ex02-18-02.js">02-18-02 가변 인자 처리 - 전개 구문 활용</a></li>
             <li><a href="ch02/ex02-19.js">02-19 생성자 함수</a></li>
             <li><a href="ch02/ex02-20.js">02-20 생성자 함수 활용</a></li>
           </ul>
