--- a/workspace-ins/index.html
+++ b/workspace-ins/index.html
@@ -294,8 +294,8 @@
             <li><a href="ch04/ex04-03-02.js">04-03-02 curry() 함수 작성</a></li>
             <li><a href="ch04/ex04-04.js">04-04 Partial application</a></li>
             <li><a href="ch04/ex04-04-01.js">04-04-01 Function.prototype.partial() 함수 추가</a></li>
-            <li><a href="ch04/ex04-05.js">04-05 Wrapper - 메모이제이션</a></li>
-            <li><a href="ch04/ex04-06.js">04-06 Wrapper - 메모이제이션, 클로저</a></li>
+            <li><a href="ch04/ex04-05.js">04-05 메모이제이션</a></li>
+            <li><a href="ch04/ex04-06.js">04-06 메모이제이션, 클로저 사용</a></li>
           </ul>
         </section>
         <section class="paragraph">
