♻️ js파일 따로 분리

--- a/workspace-ins/ch05/ex05-02.html
+++ b/workspace-ins/ch05/ex05-02.html
@@ -13,15 +13,6 @@
     <span>0</span>
     <button>+</button>
   </div>
-  <script>
-    // container 하위의 button 요소 찾기
-    const btn = document.querySelector('#container > button');
-    const countSpan = document.querySelector('#container > span');
-
-    btn.addEventListener('click', function(){
-      const count = parseInt(countSpan.firstChild.nodeValue);
-      countSpan.firstChild.nodeValue = count + 1;
-    });
-  </script>
+  <script src="ex05-02.js"></script>
 </body>
 </html>
