--- a/workspace-ins/ch05/ex05-06.html
+++ b/workspace-ins/ch05/ex05-06.html
@@ -4,34 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DOM</title>
-  <script>
-    document.addEventListener('DOMContentLoaded', function(){
-      const a = document.querySelector('a');
-      const img = document.querySelector('img');
-      const input = document.querySelector('input');
-
-      // 표준 속성 접근
-      console.log(a.href);
-      console.log(img.src);
-      console.log(img.width);
-      console.log(img.height);
-      console.log(input.type);
-      console.log(input.name);
-      console.log(input.value);
-      
-      // 비표준 속성 접근(비추천)
-      console.log(img.format); // undefined
-      console.log(img.getAttribute('format')); // png
-
-      // 커스텀 속성 접근
-      console.log(img.dataset);
-      console.log(img.dataset.age);
-      console.log(img.dataset.format);
-      console.log(img.dataset.userName);
-      img.dataset.address = '서울시';
-
-    });
-  </script>
+  <script src="ex05-06.js"></script>
 </head>
 <body>
   <h1>DOM - HTML 속성 접근</h1>
