--- a/workspace-ins/ch05/bom/ex05-17.html
+++ b/workspace-ins/ch05/bom/ex05-17.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BOM</title>
+  <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1e57ad9e84ea0c6954b5c8d59dfbb6da"></script>
   <script type="module" src="./ex05-17.js"></script>
 </head>
 <body>
   <h1>Geolocation API</h1>
   <button>내 위치 확인</button>
   <div id="my-position"></div>
+  <div id="map" style="width:500px;height:400px;"></div>
 </body>
 </html>
