--- a/workspace-ins/index.html
+++ b/workspace-ins/index.html
@@ -103,7 +103,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <h1 class="example-title">Javascript 실습</h1>
+      <h1 class="example-title">Javascript 실습33</h1>
     </header>
     <div class="toggle-container">
       <input type="checkbox" id="language-toggle" class="toggle-input">
