--- a/workspace-ins/index.html
+++ b/workspace-ins/index.html
@@ -399,7 +399,8 @@
           <h4 class="paragraph-title">5.5 Web APIs</h4>
           <ul>
             <li><a href="ch05/bom/ex05-17.html">05-17 Geolocation API</a></li>
-            <li><a href="ch05/chat/index.html">라이언 채팅 - Web Socket API, Web Storage API</a></li>
+            <li><a href="ch05/chat/">Web Socket API, Web Storage API - 라이언 채팅</a></li>
+            <li><a href="ch05/chat.v0/">Web Socket API, Web Storage API - 라이언 채팅 v0 버전</a></li>
           </ul>
         </section>
       </section>
@@ -617,6 +618,7 @@
         <section class="paragraph">
           <h4 class="paragraph-title">자바스크립트 시험</h4>
           <ul>
+            <li><a href="exam/question.md">객관식 문제, 정답, 해설</a></li>
             <li><a href="exam/problem.html">Todo List 문제</a></li>
             <li><a href="exam/solve.html">Todo List 정답</a></li>
           </ul>
